--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
 </head>
 <body>
     <header>
-        <div></div>
-        <nav>
-            
+        <div class="header__container--icons">
+            <div class="icons--list">
+                <a href="#"><span class="social-media flaticon-001-facebook"></span></a>
+                <a href="#"><span class="social-media flaticon-002-twitter"></span></a>
+                <a href="#"><span class="social-media flaticon-011-instagram"></span></a>
+                <a href="#"><span class="social-media flaticon-008-youtube"></span></a>
+                <a href="#"><span class="social-media flaticon-010-linkedin"></span></a>
+            </div>
+        </div>
+        <nav class="header__container--nav">
+            <picture class="nav--logo">
+                <a href="#"><img src="assets/images/Logo-negro.png" alt="logo del blog"></a>
+            </picture>
+            <div class="nav--about">
+                <a href="about.html">sobre mí</a>
+            </div>
         </nav>
     </header>
 </body>
