--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section>
+            <h1>Conoce las novedades y noticias del Munfo Tech</h1>
+            <a href=""><button>Entra ya!</button></a>
+        </section>
+    </main>
 </body>
 </html>
