--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Conoce las novedades y noticias del Munfo Tech</h1>
-            <a href=""><button>Entra ya!</button></a>
+        <section class="main__section--heading">
+            <div class="heading--contain">
+                <h1>Conoce las novedades y noticias del Mundo Tech.</h1>
+                <a href=""><button>Entra ya!</button></a>
+            </div>
         </section>
     </main>
 </body>
