--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main__container">
         <section class="main__section--heading">
             <div class="heading--contain">
                 <h1>Conoce las novedades y noticias del Mundo Tech.</h1>
-                <a href=""><button>Entra ya!</button></a>
+                <a href="blogs.html"><button>Entra ya!</button></a>
             </div>
         </section>
     </main>
