--- a/blogs.html
+++ b/blogs.html
@@ -32,61 +32,61 @@
     <main class="main__blogs">
         <section class="main__blogs--container">
             <div class="blogs--new">
-                <h3>TÍTULO</h3>
+                <h3>WELCOME!</h3>
                 <picture class="blogs--image">
                     <img src="assets/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="imagen noticia">
                 </picture>
                 <div class="blogs--info">
-                    <h3>Noticias</h3>
+                    <h4>Título del post</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quis hic animi repellat. Eum, aliquid? Nemo, quas neque nam hic modi qui, velit molestias sapiente sed labore eveniet reprehenderit doloribus.</p>
-                    <a class="blogs--button" href="#">Leer más</a>
+                    <a class="blogs--button" href="blog.html">Leer más</a>
                 </div>
             </div>
         </section>
         <section class="main__posts--container"> 
             <div>
-                <h3>Últimos blogposts</h3>
+                <h3>Últimos Blogposts</h3>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>  
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
                     <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h4>Título del post</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a, dolores nihil ratione ipsam itaque odit eveniet! Vel?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
             </div>
         </section>
     </main>
     <footer>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </footer>
 </body>
 </html>
