--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main class="main__blogs">
-        <section class="main__blogs--container">
+        <section class="grid--container main__blogs--container">
             <div class="blogs--new">
                 <h3>WELCOME!</h3>
                 <picture class="blogs--image">
@@ -44,40 +44,40 @@
             </div>
         </section>
         <section class="main__posts--container"> 
-            <div>
+            <div class="grid--container">
                 <h3>Últimos Blogposts</h3>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/alexandru-acea-XEB8y0nRRP4-unsplash.jpg" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/corinne-kutz-tMI2_-r5Nfo-unsplash.jpg" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>  
                     <a class="blogs--button" href="#">Leer más</a>
                 </article>
                 <article class="posts--container">
-                    <img src="assets/images/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <img src="assets/images/dose-media-DiTiYQx0mh4-unsplash.jpg" alt="post">
                     <h4>Título del post</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ullam eligendi vitae adipisci voluptate ad neque corrupti ducimus earum magnam cupiditate a.</p>
                     <a class="blogs--button" href="#">Leer más</a>
